--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,9 +53,14 @@ media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = 
 media3-exoplayer-dash = { module = "androidx.media3:media3-exoplayer-dash", version.ref = "media3" }
 media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3" }
 media3-session = { module = "androidx.media3:media3-session", version.ref = "media3" }
+media3-datasource = { module = "androidx.media3:media3-datasource-okhttp", version.ref = "media3" }
+media3-legacy = { module = "androidx.legacy:legacy-support-v4", version = "1.0.0" }
 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version = "1.0.1" }
 coil = { module = "io.coil-kt:coil-compose", version = "2.7.0" }
+glide = { module = "com.github.bumptech.glide:glide", version = "4.16.0" }
+androidx-material-icons-extended = {  group = "androidx.compose.material", name = "material-icons-extended"}
+
 
 
 
@@ -67,7 +72,7 @@ kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", versio
 
 [bundles]
 koin = ["koin-core", "koin-compose"]
-media3 = ["media3-exoplayer", "media3-exoplayer-dash", "media3-ui", "media3-session","koin-android"]
+media3 = ["media3-exoplayer", "media3-exoplayer-dash", "media3-ui", "media3-session","koin-android","media3-datasource","media3-legacy"]
 
 
 
